crates/carina-tui/src/app/snapshots/carina_tui__app__render__transcript_tests__fullscreen_patch_review_zh_hans_160.snap
---
source: crates/carina-tui/src/app/render.rs
expression: rendered
---
size=160x40

   ╭ 变更工作台 ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
   │ patch-authz-boundary-0184  ·  已接受  +8  -2  3 个文件                                                                                                 │
   │ 事务  tx-workspace-0184  ·  执行者  carina/patch-agent  ·  验证  通过                                                                                  │
   │                                                                                                                                                        │
   │   事务                       │ ▌ 工作区文件                               │   crates/carina-kernel/src/runtime/patch.rs  +2 -1  1/1 @@                 │
   │ ▌ 已接受  …-boundary-0184    │ ▌ M …/src/runtime/patch.rs     +2 -1 1/1@@ │ @@ -41,5 +41,7 @@ pub fn authorize_patch(request: Request) -> Decision {   │
   │   待审阅  patch-docs-0185    │ │ A …/src/app/review.rs        +4 -0 1/1@@ │     |     -     policy.check(request.capability)                           │
   │                              │ │ M …/product/patch-review.md  +2 -1 0/1@@ │     |  41 +     policy.check(request.capability, request.workspace)        │
   │                              │                                            │     |  42 +         .with_transaction(request.transaction_id)              │
   │                              │                                            │     |  43   }                                                              │
   │                              │                                            │                                                                            │
   │                              │                                            │                                                                            │
   │                              │                                            │                                                                            │
   │                              │                                            │                                                                            │
   │                              │                                            │                                                                            │
   │                              │                                            │                                                                            │
   │                              │                                            │                                                                            │
   │                              │                                            │                                                                            │
   │                              │                                            │                                                                            │
   │                              │                                            │                                                                            │
   │                              │                                            │                                                                            │
   │                              │                                            │                                                                            │
   │                              │                                            │                                                                            │
   │                              │                                            │                                                                            │
   │                              │                                            │                                                                            │
   │                              │                                            │                                                                            │
   │                              │                                            │                                                                            │
   │                              │                                            │                                                                            │
   │                              │                                            │                                                                            │
   │                              │                                            │                                                                            │
   │                              │                                            │                                                                            │
   │                              │                                            │                                                                            │
   │                              │                                            │                                                                            │
   │                              │                                            │                                                                            │
   │                              │                                            │                                                                            │
   │  Tab  导航   B  回滚   R  刷新   Esc  关闭                                                                                                             │
   │                                                                                                                                                        │
   ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
styles:
(3,1)..(157,1) (Rgb(52, 65, 68), Reset, NONE)
(3,2)..(4,2) (Rgb(52, 65, 68), Reset, NONE)
(5,2)..(30,2) (Reset, Reset, BOLD)
(30,2)..(35,2) (Rgb(150, 160, 156), Reset, NONE)
(35,2)..(41,2) (Rgb(142, 219, 210), Reset, BOLD)
(41,2)..(59,2) (Rgb(150, 160, 156), Reset, NONE)
(156,2)..(157,2) (Rgb(52, 65, 68), Reset, NONE)
(3,3)..(4,3) (Rgb(52, 65, 68), Reset, NONE)
(5,3)..(11,3) (Rgb(150, 160, 156), Reset, NONE)
(28,3)..(41,3) (Rgb(150, 160, 156), Reset, NONE)
(59,3)..(70,3) (Rgb(150, 160, 156), Reset, NONE)
(156,3)..(157,3) (Rgb(52, 65, 68), Reset, NONE)
(3,4)..(4,4) (Rgb(52, 65, 68), Reset, NONE)
(156,4)..(157,4) (Rgb(52, 65, 68), Reset, NONE)
(3,5)..(4,5) (Rgb(52, 65, 68), Reset, NONE)
(5,5)..(34,5) (Rgb(150, 160, 156), Reset, BOLD)
(34,5)..(35,5) (Rgb(52, 65, 68), Reset, NONE)
(36,5)..(79,5) (Rgb(142, 219, 210), Reset, BOLD)
(79,5)..(80,5) (Rgb(52, 65, 68), Reset, NONE)
(81,5)..(155,5) (Rgb(150, 160, 156), Reset, BOLD)
(156,5)..(157,5) (Rgb(52, 65, 68), Reset, NONE)
(3,6)..(4,6) (Rgb(52, 65, 68), Reset, NONE)
(5,6)..(34,6) (Reset, Reset, BOLD)
(34,6)..(35,6) (Rgb(52, 65, 68), Reset, NONE)
(36,6)..(40,6) (Rgb(150, 160, 156), Rgb(36, 61, 62), BOLD)
(40,6)..(67,6) (Reset, Rgb(36, 61, 62), BOLD)
(67,6)..(69,6) (Rgb(142, 219, 210), Rgb(36, 61, 62), BOLD)
(69,6)..(70,6) (Reset, Rgb(36, 61, 62), BOLD)
(70,6)..(72,6) (Rgb(255, 124, 120), Rgb(36, 61, 62), BOLD)
(72,6)..(78,6) (Rgb(90, 101, 99), Rgb(36, 61, 62), BOLD)
(78,6)..(79,6) (Reset, Rgb(36, 61, 62), BOLD)
(79,6)..(80,6) (Rgb(52, 65, 68), Reset, NONE)
(81,6)..(153,6) (Rgb(90, 101, 99), Reset, NONE)
(156,6)..(157,6) (Rgb(52, 65, 68), Reset, NONE)
(3,7)..(4,7) (Rgb(52, 65, 68), Reset, NONE)
(34,7)..(35,7) (Rgb(52, 65, 68), Reset, NONE)
(36,7)..(40,7) (Rgb(150, 160, 156), Reset, NONE)
(67,7)..(69,7) (Rgb(142, 219, 210), Reset, NONE)
(70,7)..(72,7) (Rgb(255, 124, 120), Reset, NONE)
(72,7)..(78,7) (Rgb(90, 101, 99), Reset, NONE)
(79,7)..(80,7) (Rgb(52, 65, 68), Reset, NONE)
(81,7)..(91,7) (Rgb(90, 101, 99), Reset, NONE)
(91,7)..(129,7) (Rgb(255, 124, 120), Reset, NONE)
(156,7)..(157,7) (Rgb(52, 65, 68), Reset, NONE)
(3,8)..(4,8) (Rgb(52, 65, 68), Reset, NONE)
(34,8)..(35,8) (Rgb(52, 65, 68), Reset, NONE)
(36,8)..(40,8) (Rgb(150, 160, 156), Reset, NONE)
(67,8)..(69,8) (Rgb(142, 219, 210), Reset, NONE)
(70,8)..(72,8) (Rgb(255, 124, 120), Reset, NONE)
(72,8)..(78,8) (Rgb(90, 101, 99), Reset, NONE)
(79,8)..(80,8) (Rgb(52, 65, 68), Reset, NONE)
(81,8)..(91,8) (Rgb(90, 101, 99), Reset, NONE)
(91,8)..(128,8) (Rgb(142, 219, 210), Reset, NONE)
(128,8)..(147,8) (Rgb(142, 219, 210), Reset, BOLD | UNDERLINED)
(147,8)..(148,8) (Rgb(142, 219, 210), Reset, NONE)
(156,8)..(157,8) (Rgb(52, 65, 68), Reset, NONE)
(3,9)..(4,9) (Rgb(52, 65, 68), Reset, NONE)
(34,9)..(35,9) (Rgb(52, 65, 68), Reset, NONE)
(79,9)..(80,9) (Rgb(52, 65, 68), Reset, NONE)
(81,9)..(91,9) (Rgb(90, 101, 99), Reset, NONE)
(91,9)..(142,9) (Rgb(142, 219, 210), Reset, NONE)
(156,9)..(157,9) (Rgb(52, 65, 68), Reset, NONE)
(3,10)..(4,10) (Rgb(52, 65, 68), Reset, NONE)
(34,10)..(35,10) (Rgb(52, 65, 68), Reset, NONE)
(79,10)..(80,10) (Rgb(52, 65, 68), Reset, NONE)
(81,10)..(91,10) (Rgb(90, 101, 99), Reset, NONE)
(156,10)..(157,10) (Rgb(52, 65, 68), Reset, NONE)
(3,11)..(4,11) (Rgb(52, 65, 68), Reset, NONE)
(34,11)..(35,11) (Rgb(52, 65, 68), Reset, NONE)
(79,11)..(80,11) (Rgb(52, 65, 68), Reset, NONE)
(156,11)..(157,11) (Rgb(52, 65, 68), Reset, NONE)
(3,12)..(4,12) (Rgb(52, 65, 68), Reset, NONE)
(34,12)..(35,12) (Rgb(52, 65, 68), Reset, NONE)
(79,12)..(80,12) (Rgb(52, 65, 68), Reset, NONE)
(156,12)..(157,12) (Rgb(52, 65, 68), Reset, NONE)
(3,13)..(4,13) (Rgb(52, 65, 68), Reset, NONE)
(34,13)..(35,13) (Rgb(52, 65, 68), Reset, NONE)
(79,13)..(80,13) (Rgb(52, 65, 68), Reset, NONE)
(156,13)..(157,13) (Rgb(52, 65, 68), Reset, NONE)
(3,14)..(4,14) (Rgb(52, 65, 68), Reset, NONE)
(34,14)..(35,14) (Rgb(52, 65, 68), Reset, NONE)
(79,14)..(80,14) (Rgb(52, 65, 68), Reset, NONE)
(156,14)..(157,14) (Rgb(52, 65, 68), Reset, NONE)
(3,15)..(4,15) (Rgb(52, 65, 68), Reset, NONE)
(34,15)..(35,15) (Rgb(52, 65, 68), Reset, NONE)
(79,15)..(80,15) (Rgb(52, 65, 68), Reset, NONE)
(156,15)..(157,15) (Rgb(52, 65, 68), Reset, NONE)
(3,16)..(4,16) (Rgb(52, 65, 68), Reset, NONE)
(34,16)..(35,16) (Rgb(52, 65, 68), Reset, NONE)
(79,16)..(80,16) (Rgb(52, 65, 68), Reset, NONE)
(156,16)..(157,16) (Rgb(52, 65, 68), Reset, NONE)
(3,17)..(4,17) (Rgb(52, 65, 68), Reset, NONE)
(34,17)..(35,17) (Rgb(52, 65, 68), Reset, NONE)
(79,17)..(80,17) (Rgb(52, 65, 68), Reset, NONE)
(156,17)..(157,17) (Rgb(52, 65, 68), Reset, NONE)
(3,18)..(4,18) (Rgb(52, 65, 68), Reset, NONE)
(34,18)..(35,18) (Rgb(52, 65, 68), Reset, NONE)
(79,18)..(80,18) (Rgb(52, 65, 68), Reset, NONE)
(156,18)..(157,18) (Rgb(52, 65, 68), Reset, NONE)
(3,19)..(4,19) (Rgb(52, 65, 68), Reset, NONE)
(34,19)..(35,19) (Rgb(52, 65, 68), Reset, NONE)
(79,19)..(80,19) (Rgb(52, 65, 68), Reset, NONE)
(156,19)..(157,19) (Rgb(52, 65, 68), Reset, NONE)
(3,20)..(4,20) (Rgb(52, 65, 68), Reset, NONE)
(34,20)..(35,20) (Rgb(52, 65, 68), Reset, NONE)
(79,20)..(80,20) (Rgb(52, 65, 68), Reset, NONE)
(156,20)..(157,20) (Rgb(52, 65, 68), Reset, NONE)
(3,21)..(4,21) (Rgb(52, 65, 68), Reset, NONE)
(34,21)..(35,21) (Rgb(52, 65, 68), Reset, NONE)
(79,21)..(80,21) (Rgb(52, 65, 68), Reset, NONE)
(156,21)..(157,21) (Rgb(52, 65, 68), Reset, NONE)
(3,22)..(4,22) (Rgb(52, 65, 68), Reset, NONE)
(34,22)..(35,22) (Rgb(52, 65, 68), Reset, NONE)
(79,22)..(80,22) (Rgb(52, 65, 68), Reset, NONE)
(156,22)..(157,22) (Rgb(52, 65, 68), Reset, NONE)
(3,23)..(4,23) (Rgb(52, 65, 68), Reset, NONE)
(34,23)..(35,23) (Rgb(52, 65, 68), Reset, NONE)
(79,23)..(80,23) (Rgb(52, 65, 68), Reset, NONE)
(156,23)..(157,23) (Rgb(52, 65, 68), Reset, NONE)
(3,24)..(4,24) (Rgb(52, 65, 68), Reset, NONE)
(34,24)..(35,24) (Rgb(52, 65, 68), Reset, NONE)
(79,24)..(80,24) (Rgb(52, 65, 68), Reset, NONE)
(156,24)..(157,24) (Rgb(52, 65, 68), Reset, NONE)
(3,25)..(4,25) (Rgb(52, 65, 68), Reset, NONE)
(34,25)..(35,25) (Rgb(52, 65, 68), Reset, NONE)
(79,25)..(80,25) (Rgb(52, 65, 68), Reset, NONE)
(156,25)..(157,25) (Rgb(52, 65, 68), Reset, NONE)
(3,26)..(4,26) (Rgb(52, 65, 68), Reset, NONE)
(34,26)..(35,26) (Rgb(52, 65, 68), Reset, NONE)
(79,26)..(80,26) (Rgb(52, 65, 68), Reset, NONE)
(156,26)..(157,26) (Rgb(52, 65, 68), Reset, NONE)
(3,27)..(4,27) (Rgb(52, 65, 68), Reset, NONE)
(34,27)..(35,27) (Rgb(52, 65, 68), Reset, NONE)
(79,27)..(80,27) (Rgb(52, 65, 68), Reset, NONE)
(156,27)..(157,27) (Rgb(52, 65, 68), Reset, NONE)
(3,28)..(4,28) (Rgb(52, 65, 68), Reset, NONE)
(34,28)..(35,28) (Rgb(52, 65, 68), Reset, NONE)
(79,28)..(80,28) (Rgb(52, 65, 68), Reset, NONE)
(156,28)..(157,28) (Rgb(52, 65, 68), Reset, NONE)
(3,29)..(4,29) (Rgb(52, 65, 68), Reset, NONE)
(34,29)..(35,29) (Rgb(52, 65, 68), Reset, NONE)
(79,29)..(80,29) (Rgb(52, 65, 68), Reset, NONE)
(156,29)..(157,29) (Rgb(52, 65, 68), Reset, NONE)
(3,30)..(4,30) (Rgb(52, 65, 68), Reset, NONE)
(34,30)..(35,30) (Rgb(52, 65, 68), Reset, NONE)
(79,30)..(80,30) (Rgb(52, 65, 68), Reset, NONE)
(156,30)..(157,30) (Rgb(52, 65, 68), Reset, NONE)
(3,31)..(4,31) (Rgb(52, 65, 68), Reset, NONE)
(34,31)..(35,31) (Rgb(52, 65, 68), Reset, NONE)
(79,31)..(80,31) (Rgb(52, 65, 68), Reset, NONE)
(156,31)..(157,31) (Rgb(52, 65, 68), Reset, NONE)
(3,32)..(4,32) (Rgb(52, 65, 68), Reset, NONE)
(34,32)..(35,32) (Rgb(52, 65, 68), Reset, NONE)
(79,32)..(80,32) (Rgb(52, 65, 68), Reset, NONE)
(156,32)..(157,32) (Rgb(52, 65, 68), Reset, NONE)
(3,33)..(4,33) (Rgb(52, 65, 68), Reset, NONE)
(34,33)..(35,33) (Rgb(52, 65, 68), Reset, NONE)
(79,33)..(80,33) (Rgb(52, 65, 68), Reset, NONE)
(156,33)..(157,33) (Rgb(52, 65, 68), Reset, NONE)
(3,34)..(4,34) (Rgb(52, 65, 68), Reset, NONE)
(34,34)..(35,34) (Rgb(52, 65, 68), Reset, NONE)
(79,34)..(80,34) (Rgb(52, 65, 68), Reset, NONE)
(156,34)..(157,34) (Rgb(52, 65, 68), Reset, NONE)
(3,35)..(4,35) (Rgb(52, 65, 68), Reset, NONE)
(34,35)..(35,35) (Rgb(52, 65, 68), Reset, NONE)
(79,35)..(80,35) (Rgb(52, 65, 68), Reset, NONE)
(156,35)..(157,35) (Rgb(52, 65, 68), Reset, NONE)
(3,36)..(4,36) (Rgb(52, 65, 68), Reset, NONE)
(5,36)..(10,36) (Rgb(142, 219, 210), Reset, BOLD)
(10,36)..(17,36) (Rgb(150, 160, 156), Reset, NONE)
(17,36)..(20,36) (Rgb(142, 219, 210), Reset, BOLD)
(20,36)..(27,36) (Rgb(150, 160, 156), Reset, NONE)
(27,36)..(30,36) (Rgb(142, 219, 210), Reset, BOLD)
(30,36)..(37,36) (Rgb(150, 160, 156), Reset, NONE)
(37,36)..(42,36) (Rgb(142, 219, 210), Reset, BOLD)
(42,36)..(49,36) (Rgb(150, 160, 156), Reset, NONE)
(156,36)..(157,36) (Rgb(52, 65, 68), Reset, NONE)
(3,37)..(4,37) (Rgb(52, 65, 68), Reset, NONE)
(156,37)..(157,37) (Rgb(52, 65, 68), Reset, NONE)
(3,38)..(157,38) (Rgb(52, 65, 68), Reset, NONE)
